# weetee

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/: en.json  ua.json
src/: CMakeLists.txt  app_state.cpp  app_state.hpp  app_state_swagger.cpp  gui.cpp  gui.hpp  gui_tests.cpp  gui_tests.hpp  http.cpp  http.hpp  i18n.cpp  i18n.hpp  json.cpp  json.hpp  main.cpp  partial_dict.cpp  partial_dict.hpp  save_state.cpp  save_state.hpp  save_state_incl.hpp  test.cpp  test.hpp  tests.cpp  tests.hpp  textinputcombo.cpp  textinputcombo.hpp  utils.cpp  utils.hpp  variables.cpp  variables.hpp
tests/: CMakeLists.txt  utils_test.cpp
tests/functional/: CMakeLists.txt  gui_tests.cpp  gui_tests.hpp
tests/fuzz/: CMakeLists.txt  save_state.cpp
tests/fuzz/save_state_corpus/: sync_test.wt
tests/unit/: CMakeLists.txt  json.cpp  save_state.cpp  utils.cpp  utils_test.cpp  variables.cpp
